--- a/about-us.html
+++ b/about-us.html
@@ -301,7 +301,7 @@
                             <li class="g-brd-bottom g-brd-gray-light-v4 g-py-10">
                               <a class="g-color-main g-color-main--hover" href="sale-banner.html">Sale Banner</a></li>
                             <li class="g-brd-bottom g-brd-gray-light-v4 g-py-10">
-                              <a class="g-color-main g-color-main--hover" href="typography.html">Typography Animation</a></li>
+                              <a class="g-color-main g-color-main--hover" href="typography-design.html">Typography Animation</a></li>
                             <li class="g-brd-bottom g-brd-gray-light-v4 g-py-10">
                               <a class="g-color-main g-color-main--hover" href="advertisement-design.html">Advertisement Design</a></li>
                             <li class="g-brd-bottom g-brd-gray-light-v4 g-py-10">
