typography_page_updated

--- a/typography.html
+++ b/typography.html
@@ -883,43 +883,63 @@
                 <p>Typography animation has emerged as a compelling design trend, blending the principles of graphic design and motion to create visually engaging and emotionally resonant experiences. As audiences increasingly seek dynamic and interactive content, animating text is proving to be a powerful tool for designers and marketers alike. But what exactly is typography animation, and how can it elevate your projects?
 
                   <h4>What Is Typography Animation?</h4> 
+                  <div class="embed-responsive embed-responsive-16by9 g-mb-60">
+                    <video preload="auto" controls controls="controls" poster="images/typography-animation.jpg" __idm_id__="8193">
+                      <source src="videos/typography-animation.mp4" type="video/webm;">
+                        <source src="videos/typography-animation.mp4" type="video/mp4;">
+                    </video>
+                  </div>
                   <p>Typography animation refers to the use of motion to bring textual elements to life. It goes beyond static text by incorporating transitions, effects, and movements that enhance storytelling and communication. From subtle fades and slides to complex kinetic typography, this form of animation transforms words into a visual spectacle that grabs attention and conveys meaning more effectively.</p>
   
                   <h4>Why Typography Animation Matters</h4> 
                   <p>1. Enhanced Storytelling: Animated text can guide viewers through a narrative, emphasizing key points and creating an emotional connection.
                     <br>
-                    2. **Improved Engagement**: Motion naturally attracts the eye, making animated typography ideal for grabbing and holding audience attention in a crowded digital landscape.
+                    2. Improved Engagement: Motion naturally attracts the eye, making animated typography ideal for grabbing and holding audience attention in a crowded digital landscape.
                     <br>
-                    3. **Stronger Branding**: Custom typography animations can reinforce brand identity, adding personality and uniqueness to marketing materials.
+                    3. Stronger Branding: Custom typography animations can reinforce brand identity, adding personality and uniqueness to marketing materials.
                     <br>
-                    4. **Versatility**: Typography animation can be used across various mediums, including websites, social media, presentations, and video content.</p>
+                    4. Versatility: Typography animation can be used across various mediums, including websites, social media, presentations, and video content.</p>
   
-                  ### Types of Typography Animation
-                  - **Kinetic Typography**: Text that moves in sync with audio or video, often used in music videos, movie titles, or explainer videos.
-                  - **Morphing Text**: Words that seamlessly transform into shapes or other words, offering a mesmerizing effect.
-                  - **Parallax Scrolling**: Text that moves at different speeds relative to background elements, creating a sense of depth.
-                  - **Handwriting Animation**: Simulates text being written out in real-time, adding a personal touch to digital content.
-  
-                  ### Tools for Creating Typography Animation
-                  1. **Adobe After Effects**: A powerhouse for motion graphics, offering advanced features like keyframing and expression controls.
-                  2. **Cinema 4D**: Ideal for creating 3D typography animations.
-                  3. **Figma and Lottie**: Perfect for lightweight web animations that integrate seamlessly into websites and apps.
-                  4. **CSS and JavaScript**: For developers, coding text animations directly into web projects offers limitless customization.
-  
-                  ### Best Practices for Typography Animation
-                  1. **Keep It Purposeful**: Every animation should serve a purpose, whether it's to inform, engage, or guide the viewer.
-                  2. **Balance Creativity and Clarity**: While animations can be eye-catching, they should never compromise readability.
-                  3. **Optimize for Performance**: Especially for web-based animations, ensure that your designs are lightweight to avoid slowing down load times.
-                  4. **Test Across Devices**: Typography animations should look and function well on all screen sizes and platforms.
-  
-                  ### Inspiring Examples
-                  1. **Title Sequences**: Films like *Se7en* and *Catch Me If You Can* showcase how animated text can set the tone for a story.
-                  2. **Ad Campaigns**: Brands like Nike and Apple use kinetic typography to create impactful commercials.
-                  3. **Interactive Websites**: Modern web designs often feature scrolling text animations that guide user navigation and enhance interactivity.
-  
-                  ### The Future of Typography Animation
+                   <h5>Types of Typography Animation</h5>
+                   <br>
+                  - Kinetic Typography: Text that moves in sync with audio or video, often used in music videos, movie titles, or explainer videos.
+                  <br>
+                  - Morphing Text: Words that seamlessly transform into shapes or other words, offering a mesmerizing effect.
+                  <br>
+                  - Parallax Scrolling: Text that moves at different speeds relative to background elements, creating a sense of depth.
+                  <br>
+                  - Handwriting Animation: Simulates text being written out in real-time, adding a personal touch to digital content.
+                    <br>
+                    <br>
+                 <h5>Tools for Creating Typography Animation</h5>
+                 <br>
+                  1. Adobe After Effects: A powerhouse for motion graphics, offering advanced features like keyframing and expression controls.
+                  <br>
+                  2. Cinema 4D: Ideal for creating 3D typography animations.
+                  <br>
+                  3. Figma and Lottie: Perfect for lightweight web animations that integrate seamlessly into websites and apps.
+                  <br>
+                  4. CSS and JavaScript Best Practices for Typography Animation
+                   <br>
+                  1. Keep It Purposeful: Every animation should serve a purpose, whether it's to inform, engage, or guide the viewer.
+                  <br>
+                  2. Balance Creativity and Clarity: While animations can be eye-catching, they should never compromise readability.
+                  <br>
+                  3. Optimize for Performance: Especially for web-based animations, ensure that your designs are lightweight to avoid slowing down load times.
+                  <br>
+                  4. Test Across Devices: Typography animations should look and function well on all screen sizes and platforms.
+                  <br>
+                   <h5>Inspiring Examples</h5>
+                   <br>
+                  1. Title Sequences: Films like *Se7en* and *Catch Me If You Can* showcase how animated text can set the tone for a story.
+                  <br>
+                  2. Ad Campaigns: Brands like Nike and Apple use kinetic typography to create impactful commercials.
+                  <br>
+                  3. Interactive Websites: Modern web designs often feature scrolling text animations that guide user navigation and enhance interactivity.
+                  <br>
+                   The Future of Typography Animation
                   As technology evolves, so do the possibilities for typography animation. AI-powered tools and real-time rendering are making it easier than ever to create complex animations, while virtual and augmented reality offer new frontiers for interactive text experiences. Typography animation is not just a trend but a fundamental aspect of modern design, poised to shape the way we communicate in an increasingly digital world.
-  
+                    <br>
                   Incorporating typography animation into your projects can elevate your design game, making your content more engaging, memorable, and impactful. Whether you're a seasoned motion designer or a beginner exploring the craft, the possibilities are as vast as your creativity.</p>
                 <!-- Sources & Tags -->
                 <div class="g-mb-30">
