--- a/pro/interior/home-vertical-slide.html
+++ b/pro/interior/home-vertical-slide.html
@@ -933,7 +933,7 @@
     <script type="text/javascript" src="js/config-revolution.min.js"></script>
     <script src="vendor/pagePiling/js/jquery.pagepiling.js"></script>
     <script src="js/config-pagePilling.js"></script>
-    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAEmXgQ65zpsjsEAfNPP9mBAz-5zjnIZBw"></script>
+    <script src="https://maps.googleapis.com/maps/api/js?key=your-api-keys"></script>
     <script src="js/theme-map.js"></script>
     <script src="js/config-contact.js"></script>
 
