--- a/pro/interior/contact.html
+++ b/pro/interior/contact.html
@@ -559,7 +559,7 @@
     <script src="vendor/sweetalert/sweetalert.min.js"></script>
     <script src="vendor/noUiSlider/nouislider.min.js"></script>
     <script src="js/config-contact.js"></script>
-    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAEmXgQ65zpsjsEAfNPP9mBAz-5zjnIZBw"></script>
+    <script src="https://maps.googleapis.com/maps/api/js?key=your-api-keys"></script>
     <script src="js/theme-map.js"></script>
 
     <!-- Main JS-->
