navigation_menu_updated

--- a/infographic-template.html
+++ b/infographic-template.html
@@ -124,7 +124,16 @@
                       <li class="dropdown-item g-bg-secondary--hover">
                         <a class="nav-link g-color-secondary-dark-v1" href="https://stock.adobe.com/contributor/211977281/SPurnoAnimation">AdobeStock</a>
                       </li>
- 
+                      <li class="dropdown-item g-bg-secondary--hover">
+                        <a class="nav-link g-color-secondary-dark-v1" href="https://www.shutterstock.com/g/SPurnoAnimation">Shutterstock Video
+                          <span class="float-right u-label g-rounded-3 g-font-size-10 g-bg-lightred g-pos-rel g-top-minus-1 g-py-3 g-ml-5">New</span>
+                        </a>
+                      </li>
+                      <li class="dropdown-item g-bg-secondary--hover">
+                        <a class="nav-link g-color-secondary-dark-v1" href="https://www.shutterstock.com/g/SPurnoImageStudio">Shutterstock Image
+                          <span class="float-right u-label g-rounded-3 g-font-size-10 g-bg-lightred g-pos-rel g-top-minus-1 g-py-3 g-ml-5">New</span>
+                        </a>
+                      </li>
                       <li class="dropdown-item g-bg-secondary--hover">
                         <a class="nav-link g-color-secondary-dark-v1" href="https://www.vecteezy.com/members/spurno">vecteezy
                           <span class="float-right u-label g-rounded-3 g-font-size-10 g-bg-lightred g-pos-rel g-top-minus-1 g-py-3 g-ml-5">New</span>
