little_bit_changes

--- a/infographic.html
+++ b/infographic.html
@@ -1151,12 +1151,12 @@
 
                 <p>We all know and love the tasty little pie charts. But what if, instead of the usual uniform clips of color, we used actual photos to make them? This agricultural infographic is a great example. All the essential info is there and not a single excess word. The numbers do all the talking, and since it’s using actual real life images of the agriculture world, it’s okay to have the whole pie green: the looks of different crops are a more than clear division. Having a patch of soil perched on the page brings extra life, and adding the detail shots at the bottom makes it closer to everyday sights of an agricultural worker.</p>
 
-                <figure class="text-center g-my-40">
-                  <img class="u-shadow-v25 img-fluid" src="blog/assets/img-temp/430x270/img1.jpg" alt="SPurno Animation Studio">
-                  <figcaption class="figure-caption g-font-size-12 g-color-gray-dark-v4 g-mt-5">
-                    <em></em>
-                  </figcaption>
-                </figure>
+                <a href="https://stock.adobe.com/contributor/211977281/SPurnoAnimation" class="btn btn-md u-btn-gradient-v1 u-btn-skew g-font-weight-600 g-letter-spacing-0_5 text-uppercase g-mr-10 g-mb-15">
+                  <span class="u-btn-skew__inner">
+                    <i class="fa fa-check-circle g-mr-3"></i>
+                    Buy From AdobeStock
+                  </span>
+                </a>
 
                 <p>While elements can enhance your infographic, it’s essential to maintain clarity. Ensure that the design does not overshadow the information being presented.</p>
                 <br>
@@ -1227,17 +1227,6 @@
               <!-- End Sources & Tags -->
 
               <hr class="g-brd-gray-light-v4">
-              <script type="text/javascript">
-                atOptions = {
-                  'key': '2a2217b42fa7a8d12535315bcd7f5d42',
-                  'format': 'iframe',
-                  'height': 90,
-                  'width': 728,
-                  'params': {}
-                };
-              </script>
-              <script type="text/javascript"
-                src="//www.topcpmcreativeformat.com/2a2217b42fa7a8d12535315bcd7f5d42/invoke.js"></script>
               <!-- Social Shares -->
               <div class="g-mb-30">
                 <ul class="list-inline text-uppercase mb-0">
