--- a/about-us.html
+++ b/about-us.html
@@ -131,17 +131,17 @@
                         </a>
                       </li>
                       <li class="dropdown-item g-bg-secondary--hover">
-                        <a class="nav-link g-color-secondary-dark-v1" href="https://www.shutterstock.com/g/SPurnoImageStudio">Shutterstock Image
-                          <span class="float-right u-label g-rounded-3 g-font-size-10 g-bg-lightred g-pos-rel g-top-minus-1 g-py-3 g-ml-5">New</span>
-                        </a>
-                      </li>
-                      <li class="dropdown-item g-bg-secondary--hover">
                         <a class="nav-link g-color-secondary-dark-v1" href="https://www.vecteezy.com/members/spurno">vecteezy
                           <span class="float-right u-label g-rounded-3 g-font-size-10 g-bg-lightred g-pos-rel g-top-minus-1 g-py-3 g-ml-5">New</span>
                         </a>
                       </li>
                       <li class="dropdown-item g-bg-secondary--hover">
                         <a class="nav-link g-color-secondary-dark-v1" href="https://www.freepik.com/author/pixellvector">Freepik
+                          <span class="float-right u-label g-rounded-3 g-font-size-10 g-bg-lightred g-pos-rel g-top-minus-1 g-py-3 g-ml-5">New</span>
+                        </a>
+                      </li>
+                      <li class="dropdown-item g-bg-secondary--hover">
+                        <a class="nav-link g-color-secondary-dark-v1" href="https://www.shutterstock.com/en/g/SPurnoAnimation?rid=441825909">Get 20% OFF 
                           <span class="float-right u-label g-rounded-3 g-font-size-10 g-bg-lightred g-pos-rel g-top-minus-1 g-py-3 g-ml-5">New</span>
                         </a>
                       </li>
@@ -577,7 +577,7 @@
                                 </li>
                               </ul>
                               <h3 class="h5 g-font-weight-300 g-mb-0">
-                                <a class="g-color-white g-color-white--hover" href="https://www.vecteezy.com/contributors?ref=3e6294ab-ad45-4d05-a6d1-69a50e4d26da&sub_id=default">Sign up &amp; Earn</a>
+                                <a class="g-color-white g-color-white--hover" href="https://www.shutterstock.com/en/g/SPurnoAnimation?rid=441825909">Sign up &amp; Earn</a>
                               </h3>
                             </div>
                           </article>
