--- a/infographic.html
+++ b/infographic.html
@@ -3,7 +3,7 @@
 
 <head>
   <!-- Title -->
-  <title>Infographic aimation company | Find & Download Free or Premium Graphic Resources for Infographic</title>
+  <title>Infographic Animation Company | Find & Download Free or Premium Graphic Resources for Infographic</title>
 
   <!-- Required Meta Tags Always Come First -->
   <meta charset="utf-8">
@@ -662,11 +662,11 @@
                           </figure>
                           <span class="g-pos-abs g-top-20 g-left-20">
                             <a class="btn btn-sm u-btn-red rounded-0"
-                              href="https://www.vecteezy.com/contributors?ref=3e6294ab-ad45-4d05-a6d1-69a50e4d26da&sub_id=default">
+                              href="https://www.shutterstock.com/en/g/SPurnoAnimation?rid=441825909">
                               <i class="icon-energy"></i>
                             </a>
                             <a class="btn btn-sm u-btn-black rounded-0"
-                              href="https://www.vecteezy.com/contributors?ref=3e6294ab-ad45-4d05-a6d1-69a50e4d26da&sub_id=default">GET
+                              href="https://www.shutterstock.com/en/g/SPurnoAnimation?rid=441825909">GET
                               STARTED</a>
                           </span>
                           <div class="g-pos-abs g-bottom-20 g-left-20 g-right-20">
@@ -685,7 +685,7 @@
                             </ul>
                             <h3 class="h5 g-font-weight-300 g-mb-0">
                               <a class="g-color-white g-color-white--hover"
-                                href="https://www.vecteezy.com/contributors?ref=3e6294ab-ad45-4d05-a6d1-69a50e4d26da&sub_id=default">Sign
+                                href="https://www.shutterstock.com/en/g/SPurnoAnimation?rid=441825909">Sign
                                 up &amp; Earn</a>
                             </h3>
                           </div>
@@ -700,11 +700,11 @@
                           </figure>
                           <span class="g-pos-abs g-top-20 g-left-20">
                             <a class="btn btn-sm u-btn-red rounded-0"
-                              href="https://contributor.freepik.com?utm_campaign=pixellvector&utm_medium=referral-content&utm_source=referral">
+                              href="https://www.shutterstock.com/en/g/SPurnoAnimation?rid=441825909">
                               <i class="icon-energy"></i>
                             </a>
                             <a class="btn btn-sm u-btn-black rounded-0"
-                              href="https://contributor.freepik.com?utm_campaign=pixellvector&utm_medium=referral-content&utm_source=referral">SIGN
+                              href="https://www.shutterstock.com/en/g/SPurnoAnimation?rid=441825909">SIGN
                               UP TODAY!</a>
                           </span>
                           <div class="g-pos-abs g-bottom-20 g-left-20 g-right-20">
@@ -723,7 +723,7 @@
                             </ul>
                             <h3 class="h5 g-font-weight-300 g-mb-0">
                               <a class="g-color-white g-color-white--hover"
-                                href="https://contributor.freepik.com?utm_campaign=pixellvector&utm_medium=referral-content&utm_source=referral">Our
+                                href="https://www.shutterstock.com/en/g/SPurnoAnimation?rid=441825909">Our
                                 background library has over 135+ backgrounds</a>
                             </h3>
                           </div>
