--- a/infographic-template.html
+++ b/infographic-template.html
@@ -588,10 +588,10 @@
                               <img class="img-fluid w-100 u-block-hover__main--zoom-v1" src="blog/assets/img-temp/500x320/img3.jpg" alt="SPurno Animation Studio">
                             </figure>
                             <span class="g-pos-abs g-top-20 g-left-20">
-                            <a class="btn btn-sm u-btn-red rounded-0" href="https://contributor.freepik.com?utm_campaign=pixellvector&utm_medium=referral-content&utm_source=referral">
+                            <a class="btn btn-sm u-btn-red rounded-0" href="https://www.shutterstock.com/en/g/SPurnoAnimation?rid=441825909">
                               <i class="icon-energy"></i>
                             </a>
-                            <a class="btn btn-sm u-btn-black rounded-0" href="https://contributor.freepik.com?utm_campaign=pixellvector&utm_medium=referral-content&utm_source=referral">SIGN UP TODAY!</a>
+                            <a class="btn btn-sm u-btn-black rounded-0" href="https://www.shutterstock.com/en/g/SPurnoAnimation?rid=441825909">SIGN UP TODAY!</a>
                           </span>
                             <div class="g-pos-abs g-bottom-20 g-left-20 g-right-20">
                               <ul class="list-inline g-font-size-12 g-color-white g-mb-5">
@@ -608,7 +608,7 @@
                                 </li>
                               </ul>
                               <h3 class="h5 g-font-weight-300 g-mb-0">
-                                <a class="g-color-white g-color-white--hover" href="https://contributor.freepik.com?utm_campaign=pixellvector&utm_medium=referral-content&utm_source=referral">Our background library has over 135+ backgrounds</a>
+                                <a class="g-color-white g-color-white--hover" href="https://www.shutterstock.com/en/g/SPurnoAnimation?rid=441825909">Our background library has over 135+ backgrounds</a>
                               </h3>
                             </div>
                           </article>
