--- a/index.html
+++ b/index.html
@@ -173,6 +173,8 @@
                               <a class="g-color-main g-color-main--hover" href="adobe-after-effect-animation-tutorial.html">Animation Studio Adobe After Effects Tutorial Guide</a></li>
                             <li class="g-brd-bottom g-brd-gray-light-v4 g-py-10">
                               <a class="g-color-main g-color-main--hover" href="infographic.html">Infographic Animation</a></li>
+                            <li class="g-brd-bottom g-brd-gray-light-v4 g-py-10">
+                              <a class="g-color-main g-color-main--hover" href="news-background-animation.html">News Background Animation</a></li>
                             </ul>
                         </div>
                         <div class="col-lg-5">
