--- a/infographic.html
+++ b/infographic.html
@@ -182,47 +182,30 @@
                       <div class="col-lg-2">
                         <ul class="list-unstyled mb-0">
                           <li class="g-brd-bottom g-brd-gray-light-v4 g-py-10">
-                            <a class="g-color-main g-color-main--hover" href="background-animation.html">Background
-                              Animation</a>
-                          </li>
+                            <a class="g-color-main g-color-main--hover" href="background-animation.html">Background Animation</a></li>
                           <li class="g-brd-bottom g-brd-gray-light-v4 g-py-10">
-                            <a class="g-color-main g-color-main--hover" href="presentation-slides.html">Presentation
-                              Slides</a>
-                          </li>
+                            <a class="g-color-main g-color-main--hover" href="presentation-slides.html">Presentation Slides</a></li>
                           <li class="g-brd-bottom g-brd-gray-light-v4 g-py-10">
-                            <a class="g-color-main g-color-main--hover" href="device-mockup.html">Device Mockup</a>
-                          </li>
+                            <a class="g-color-main g-color-main--hover" href="device-mockup.html">Device Mockup</a></li>
                           <li class="g-brd-bottom g-brd-gray-light-v4 g-py-10">
-                            <a class="g-color-main g-color-main--hover" href="iphone-mockup.html">iPhone Mockup</a>
-                          </li>
+                            <a class="g-color-main g-color-main--hover" href="iphone-mockup.html">iPhone Mockup</a></li>
                           <li class="g-brd-bottom g-brd-gray-light-v4 g-py-10">
-                            <a class="g-color-main g-color-main--hover" href="digital-wallpaper.html">Digital
-                              Wallpaper</a>
-                          </li>
+                            <a class="g-color-main g-color-main--hover" href="digital-wallpaper.html">Digital Wallpaper</a></li>
                           <li class="g-brd-bottom g-brd-gray-light-v4 g-py-10">
-                            <a class="g-color-main g-color-main--hover" href="motion-graphics.html">Motion Graphics</a>
-                          </li>
+                            <a class="g-color-main g-color-main--hover" href="motion-graphics.html">Motion Graphics</a></li>
                           <li class="g-brd-bottom g-brd-gray-light-v4 g-py-10">
-                            <a class="g-color-main g-color-main--hover" href="sale-banner.html">Sale Banner</a>
-                          </li>
+                            <a class="g-color-main g-color-main--hover" href="sale-banner.html">Sale Banner</a></li>
                           <li class="g-brd-bottom g-brd-gray-light-v4 g-py-10">
-                            <a class="g-color-main g-color-main--hover" href="typography-design.html">Typography
-                              Animation</a>
-                          </li>
+                            <a class="g-color-main g-color-main--hover" href="typography.html">Typography Animation</a></li>
                           <li class="g-brd-bottom g-brd-gray-light-v4 g-py-10">
-                            <a class="g-color-main g-color-main--hover" href="advertisement-design.html">Advertisement
-                              Design</a>
-                          </li>
+                            <a class="g-color-main g-color-main--hover" href="advertisement-design.html">Advertisement Design</a></li>
                           <li class="g-brd-bottom g-brd-gray-light-v4 g-py-10">
-                            <a class="g-color-main g-color-main--hover"
-                              href="adobe-after-effect-animation-tutorial.html">Animation Studio Adobe After Effects
-                              Tutorial Guide</a>
-                          </li>
+                            <a class="g-color-main g-color-main--hover" href="adobe-after-effect-animation-tutorial.html">Animation Studio Adobe After Effects Tutorial Guide</a></li>
                           <li class="g-brd-bottom g-brd-gray-light-v4 g-py-10">
-                            <a class="g-color-main g-color-main--hover" href="infographic.html">Infographic
-                              Animation</a>
-                          </li>
-                        </ul>
+                            <a class="g-color-main g-color-main--hover" href="infographic.html">Infographic Animation</a></li>
+                          <li class="g-brd-bottom g-brd-gray-light-v4 g-py-10">
+                            <a class="g-color-main g-color-main--hover" href="news-background-animation.html">News Background Animation</a></li>
+                          </ul>
                       </div>
                       <div class="col-lg-5">
                         <article class="media g-mb-20">
