--- a/news-background-animation.html
+++ b/news-background-animation.html
@@ -896,11 +896,17 @@
                         <br>
                         <div class="embed-responsive embed-responsive-16by9 g-mb-60">
                             <div class="watermark">SPurno Animation Studio</div>
-                            <video preload="auto" controls controls="controls" poster="images/Animated-Background-Stock-Video-Footage-for-Premium-Download-5.jpg" __idm_id__="8193">
-                              <source src="videos/animated-background-stock-video-for-premium-download-5.mp4" type="video/webm;">
+                            <video preload="auto" controls controls="controls" poster="images/news-background-animation.jpg" __idm_id__="8193">
+                              <source src="videos/news-background-animation.mov" type="video/webm;">
                                 <source src="videos/animated-background-stock-video-for-premium-download-5.mp4" type="video/mp4;">
                             </video>
                           </div>
+                          <a href="https://stock.adobe.com/video/sports-news-broadcast-set-with-video-green-screen-professional-broadcast-red-theme-gallery-background-highlighting-on-digital-lcd-board/1231503227" class="btn btn-md u-btn-gradient-v1 u-btn-skew g-font-weight-600 g-letter-spacing-0_5 text-uppercase g-mr-10 g-mb-15">
+                            <span class="u-btn-skew__inner">
+                              <i class="fa fa-check-circle g-mr-3"></i>
+                              Buy From AdobeStock
+                            </span>
+                          </a>
                           <br>
                         <p>News background animation refers to dynamic visual elements integrated into news presentations, typically featuring moving graphics, subtle transitions, or interactive elements that complement the content without distracting from the core message.</p>
                     </div>
