--- a/ANY/index.html
+++ b/ANY/index.html
@@ -43,7 +43,8 @@
                     timeline.from('#Layer_1-2 .cls-3', {
                         yPercent: -200,
                         duration: 3,
-                        stagger: 0.03
+                        stagger: 0.03,
+                        yoyo: true // Reverse the animation
                     })
 
 
