--- a/background-animation.html
+++ b/background-animation.html
@@ -940,7 +940,8 @@
                   <p>When using an animated video background, less is often more. The video should be relevant to your content and not overwhelm the visitor. Subtle animations that enhance rather than distract from the main content are key.</p>
                   <p>Large video files can slow down your website, leading to poor user experience and lower SEO rankings. Optimize your videos by compressing file sizes, using efficient video formats (like MP4), and enabling lazy loading to improve load times.</p><br>
                  
-                  <!-- Banners --><div class="row">
+                  <!-- Banners -->
+                   <div class="row">
                       <div class="col-lg-6 g-mb-50 g-mb-0--lg">
                         <div class="u-heading-v2-3--bottom g-brd-primary g-mb-30">
                           <h2 class="h3 text-uppercase g-font-weight-300 u-heading-v2__title">About Our Company</h2>
