--- a/motion-graphics.html
+++ b/motion-graphics.html
@@ -898,7 +898,12 @@
                         <source src="videos/animated-background-stock-video-for-premium-download-5.mp4" type="video/mp4;">
                     </video>
                   </div>
-
+                  <a href="https://stock.adobe.com/contributor/211977281/SPurnoAnimation" class="btn btn-md u-btn-gradient-v1 u-btn-skew g-font-weight-600 g-letter-spacing-0_5 text-uppercase g-mr-10 g-mb-15">
+                    <span class="u-btn-skew__inner">
+                      <i class="fa fa-check-circle g-mr-3"></i>
+                      Buy From AdobeStock
+                    </span>
+                  </a>
                   <p>Lets' jump into the details about Motion Graphics Background Animation for your videos</p>
                   <h5>What is Video Motion Graphics Background Animation?</h5>  
 
@@ -913,7 +918,12 @@
                         <source src="videos/animated-background-stock-video-for-premium-download-6.mp4" type="video/mp4;">
                     </video>
                   </div>
-
+                  <a href="https://stock.adobe.com/contributor/211977281/SPurnoAnimation" class="btn btn-md u-btn-gradient-v1 u-btn-skew g-font-weight-600 g-letter-spacing-0_5 text-uppercase g-mr-10 g-mb-15">
+                    <span class="u-btn-skew__inner">
+                      <i class="fa fa-check-circle g-mr-3"></i>
+                      Buy From AdobeStock
+                    </span>
+                  </a>
                   <p>A well-crafted video background can communicate your brand’s message effectively within seconds. Whether it’s showcasing a product in action or telling a story, video backgrounds can deliver complex information quickly and engagingly.</p>
 
                   <p>When using an animated video background, less is often more. The video should be relevant to your content and not overwhelm the visitor. Subtle animations that enhance rather than distract from the main content are key.</p>
@@ -923,111 +933,34 @@
                   <h3 class="h5 g-color-gray-dark-v1 g-font-weight-600 g-mb-10">VISIT ANIMATION STUDIO</h3>
 
                   <p>Your video background animation should look great on all devices, from desktops to smartphones. Use responsive design techniques to ensure that your video adjusts correctly across different screen sizes without compromising quality.</p>
-                    <!-- Banners -->
-                    <div class="row">
-                      <div class="col-lg-6 g-mb-30">
-                        <!-- Article -->
-                        <article class="row align-items-stretch text-center mx-0">
-                          <!--Article Content-->
-                          <div class="col-sm-6 g-bg-black g-px-30 g-py-45">
-                            <h3 class="h4 g-color-white g-font-weight-600 text-uppercase g-mb-25">Adobe
-                              <span class="d-block g-color-primary g-font-weight-700">Stock</span>
-                            </h3>
-                            <p class="g-color-gray-dark-v5 g-mb-25">Visit AdobeStock Site for more animated background </p>
-                            <a class="btn btn-md u-btn-outline-white g-font-weight-600 g-font-size-11 text-uppercase" href="https://stock.adobe.com/contributor/211977281/SPurnoAnimation">SHOP NOW</a>
-                          </div>
-                          <!-- End Article Content -->
+                  <p>A well-crafted video background can communicate your brand’s message effectively within seconds. Whether it’s showcasing a product in action or telling a story, video backgrounds can deliver complex information quickly and engagingly.</p>
+                  <p>When using an animated video background, less is often more. The video should be relevant to your content and not overwhelm the visitor. Subtle animations that enhance rather than distract from the main content are key.</p>
+                  <p>Large video files can slow down your website, leading to poor user experience and lower SEO rankings. Optimize your videos by compressing file sizes, using efficient video formats (like MP4), and enabling lazy loading to improve load times.</p><br>
+                 
+                  <!-- Banners -->
+                   <div class="row">
+                      <div class="col-lg-6 g-mb-50 g-mb-0--lg">
+                        <div class="u-heading-v2-3--bottom g-brd-primary g-mb-30">
+                          <h2 class="h3 text-uppercase g-font-weight-300 u-heading-v2__title">About Our Company</h2>
+                        </div>
 
-                          <!-- Article Image -->
-                          <div class="col-sm-6 px-0 g-bg-size-cover" data-bg-img-src="images/Animated-Background-Stock-Video-Footage-for-Premium-Download-1.jpg"></div>
-                          <!-- End Article Image -->
-                        </article>
-                        <!-- End Article -->
+                        <p class="lead">SPurno Animation Studio | 3D Infographic studio in Dhaka, Bangladesh
+                          <strong>creative</strong> Animation company providing different categories of work on video animation.
+                          <strong>You</strong> can buy and use in your upcoming project</p>
+
+                        <p class="g-mb-30">Website background animation,Background animation, infographic templates, motion typography animation, news background animation</p>
+
+                        <a class="btn btn-md u-btn-primary rounded-0 g-mr-15" href="contact-us.html">Contact us</a>
+                        <a class="btn btn-md u-btn-outline-darkgray rounded-0 g-mr-15" href="https://stock.adobe.com/contributor/211977281/SPurnoAnimation">View Our Work</a>
                       </div>
 
-                      <div class="col-lg-6 g-mb-30">
-                        <!-- Article -->
-                        <article class="row align-items-stretch text-center mx-0">
-                          <!--Article Content-->
-                          <div class="col-sm-6 g-bg-black g-px-30 g-py-45">
-                            <h3 class="h4 g-color-white g-font-weight-600 text-uppercase g-mb-25">NEED
-
-                              <span class="d-block g-color-primary g-font-weight-700">CUSTOM</span>
-
-                            </h3>
-                            <p class="g-color-gray-dark-v5 g-mb-25">You can also hire for custom video and color correction</p>
-                            <a class="btn btn-md u-btn-outline-white g-font-weight-600 g-font-size-11 text-uppercase" href="https://www.behance.net/farukahmedany/stock">Hire SPurno</a>
-                          </div>
-                          <!-- End Article Content -->
-
- 
-                        </article>
-                        <!-- End Article -->
+                      <div class="col-lg-6 align-self-center">
+                        <img class="img-fluid" src="images/spurno-logo.png" alt="Background animation, infographic studio, typography design, news background animation, website background animation">
                       </div>
                     </div>
                     <!-- End Banners -->
-
+                     <br>
                   <p>Search from thousands of royalty-free "Animation Background" stock images and video for your next project. Download royalty-free stock photos, vectors</p>
-
-                  <figure class="text-center g-my-40">
-                    <img class="u-shadow-v25 img-fluid" src="images/Animated-Background-Stock-Video-Footage-for-Premium-Download-1.jpg" alt="Animated Background Stock Video">
-                    <figcaption class="figure-caption g-font-size-12 g-color-gray-dark-v4 g-mt-5">
-                      <em>Animated Background library has over 135+ backgrounds that you can choose from that are all mobile-optimized!</em>
-                    </figcaption>
-                  </figure>
-
-                  <p>Get Animated Background that includes cgi & design, from our library of Backgrounds Motion Graphics. Get unlimited downloads with an Envato subscription!</p><br>
-
-                  <h3 class="h5 g-color-gray-dark-v1 g-font-weight-600 g-mb-10">Now and Future</h3>
-
-                  <p>Choose some other categories of animated screen.</p>
-
-                  <ul class="list-unstyled g-font-size-16 g-my-30">
-                    <li class="g-mb-15">
-                      <h4 class="h6 d-flex align-items-baseline">
-                        <i class="fa fa-angle-right g-color-gray-dark-v5 g-mr-10"></i>
-                        <span>Presentation Slides</span>
-                      </h4>
-                    </li>
-                    <li class="g-mb-15">
-                      <h4 class="h6 d-flex align-items-baseline">
-                        <i class="fa fa-angle-right g-color-gray-dark-v5 g-mr-10"></i>
-                        <span>Motion Background</span>
-                      </h4>
-                    </li>
-                    <li class="g-mb-15">
-                      <h4 class="h6 d-flex align-items-baseline">
-                        <i class="fa fa-angle-right g-color-gray-dark-v5 g-mr-10"></i>
-                        <span>Device Mockup</span>
-                      </h4>
-                    </li>
-                    <li class="g-mb-15">
-                      <h4 class="h6 d-flex align-items-baseline">
-                        <i class="fa fa-angle-right g-color-gray-dark-v5 g-mr-10"></i>
-                        <span>Digital Wallpaper</span>
-                      </h4>
-                    </li>
-                    <li class="g-mb-15">
-                      <h4 class="h6 d-flex align-items-baseline">
-                        <i class="fa fa-angle-right g-color-gray-dark-v5 g-mr-10"></i>
-                        <span>iPhone Mockup</span>
-                      </h4>
-                    </li>
-                    <li>
-                      <h4 class="h6 d-flex align-items-baseline">
-                        <i class="fa fa-angle-right g-color-gray-dark-v5 g-mr-10"></i>
-                        <span>Infographics</span>
-                      </h4>
-                    </li>
-                  </ul>
-
-                  <p>Praesent ultrices, enim a varius condimentum, nunc elit rhoncus ligula, quis fringilla risus augue sit amet enim. Curabitur dolor elit, egestas eget lectus vel, pretium semper tellus. Nunc urna lectus, vulputate ut tellus aliquam, pharetra consectetur enim. Nunc scelerisque libero diam, nec tempor justo hendrerit eu.</p>
-
-                  <div class="text-center g-width-70x--md mx-auto g-my-40">
-                    <h3 class="text-uppercase g-color-primary">Finding ways to help tell your story through video is a powerful tool.</h3>
-                  </div>
-
-                  <p>Mauris et porttitor diam. In semper volutpat mauris, ac fermentum orci commodo vitae. Curabitur ut feugiat tellus. Quisque consequat pharetra massa ultricies auctor. Sed mollis vulputate sapien eget tincidunt. Curabitur tempus lacus a sapien rutrum, feugiat blandit nunc tincidunt. Donec nec ornare tellus. In neque ipsum, auctor eu bibendum cursus, fringilla sed magna. Vestibulum lobortis libero et lectus congue efficitur. Suspendisse varius varius finibus. Maecenas luctus convallis euismod. Praesent ultrices, enim a varius condimentum, nunc elit rhoncus ligula, quis fringilla risus augue sit amet enim.</p>
                 </div>
 
                 <!-- Sources & Tags -->
