--- a/adobe-after-effect-animation-tutorial.html
+++ b/adobe-after-effect-animation-tutorial.html
@@ -1230,7 +1230,7 @@
 
                 <hr class="g-brd-gray-light-v4 g-mb-40">
 
-                <!-- Related Articles -->
+ 
                 <div class="g-mb-40">
                   <div class="u-heading-v3-1 g-mb-30">
                     <h2 class="h5 u-heading-v3__title g-color-gray-dark-v1 text-uppercase g-brd-primary">Related Articles</h2>
@@ -1891,29 +1891,21 @@
               <!-- Links -->
               <ul class="list-inline mb-0">
                 <li class="list-inline-item g-pl-0 g-pr-10">
-                  <a class="u-link-v5 g-color-secondary-light-v1 g-font-size-12" href="#">Contact Us</a>
+                  <a class="u-link-v5 g-color-secondary-light-v1 g-font-size-12" href="contact-us.html">Contact Us</a>
                 </li>
                 <li class="list-inline-item g-px-10">
-                  <a class="u-link-v5 g-color-secondary-light-v1 g-font-size-12" href="#">Help</a>
+                  <a class="u-link-v5 g-color-secondary-light-v1 g-font-size-12" href="about-us.html">Work with Us</a>
                 </li>
                 <li class="list-inline-item g-px-10">
-                  <a class="u-link-v5 g-color-secondary-light-v1 g-font-size-12" href="#">Work with Us</a>
+                  <a class="u-link-v5 g-color-secondary-light-v1 g-font-size-12" href="advertisement-design.html">Advertise</a>
                 </li>
                 <li class="list-inline-item g-px-10">
-                  <a class="u-link-v5 g-color-secondary-light-v1 g-font-size-12" href="#">Advertise</a>
+                  <a class="u-link-v5 g-color-secondary-light-v1 g-font-size-12" href="privacy-policy.html">Privacy</a>
                 </li>
                 <li class="list-inline-item g-px-10">
-                  <a class="u-link-v5 g-color-secondary-light-v1 g-font-size-12" href="#">Privacy</a>
-                </li>
-                <li class="list-inline-item g-px-10">
-                  <a class="u-link-v5 g-color-secondary-light-v1 g-font-size-12" href="#">Terms of Use</a>
-                </li>
-                <li class="list-inline-item g-px-10">
-                  <a class="u-link-v5 g-color-secondary-light-v1 g-font-size-12" href="#">Send Feedback</a>
+                  <a class="u-link-v5 g-color-secondary-light-v1 g-font-size-12" href="terms-of-use.html">Terms of Use</a>
                 </li>
               </ul>
-              <!-- End Links -->
-            </div>
 
             <div class="col-md-2 g-mb-30">
               <!-- Large Button Group -->
