--- a/background-animation.html
+++ b/background-animation.html
@@ -1411,7 +1411,7 @@
                       <a class="u-link-v5 g-color-gray-dark-v4" href="#">SPurno</a>
                     </span>
                     <h3 class="h6">
-                      <a class="g-color-gray-dark-v1" href="#">Architects plan to stop skyscrapers from blocking out sunlight</a>
+                      <a class="g-color-gray-dark-v1" href="https://spurno.github.io">Animation Studio in BD</a>
                     </h3>
                   </article>
                   <!-- End Article -->
@@ -1421,23 +1421,10 @@
                   <!-- Article -->
                   <article>
                     <span class="g-font-size-12">
-                      <a class="u-link-v5 g-color-gray-dark-v4" href="#">James Doe</a>
+                      <a class="u-link-v5 g-color-gray-dark-v4" href="#">Faruk Ahmed</a>
                     </span>
                     <h3 class="h6">
-                      <a class="g-color-gray-dark-v1" href="#">Cooltex is one of the best technology company of our age and future</a>
-                    </h3>
-                  </article>
-                  <!-- End Article -->
-
-                  <hr class="g-brd-gray-light-v4 g-mt-15 g-mb-10">
-
-                  <!-- Article -->
-                  <article>
-                    <span class="g-font-size-12">
-                      <a class="u-link-v5 g-color-gray-dark-v4" href="#">SPurno</a>
-                    </span>
-                    <h3 class="h6">
-                      <a class="g-color-gray-dark-v1" href="#">Some text goes here with plain English and much more other texts go there..</a>
+                      <a class="g-color-gray-dark-v1" href="adobe-after-effect-animation-tutorial.html">Green scrren video editing tools for Adobe After Effect</a>
                     </h3>
                   </article>
                   <!-- End Article -->
@@ -1593,25 +1580,19 @@
               <!-- Links -->
               <ul class="list-inline mb-0">
                 <li class="list-inline-item g-pl-0 g-pr-10">
-                  <a class="u-link-v5 g-color-secondary-light-v1 g-font-size-12" href="#">Contact Us</a>
+                  <a class="u-link-v5 g-color-secondary-light-v1 g-font-size-12" href="contact-us.html">Contact Us</a>
                 </li>
                 <li class="list-inline-item g-px-10">
-                  <a class="u-link-v5 g-color-secondary-light-v1 g-font-size-12" href="#">Help</a>
+                  <a class="u-link-v5 g-color-secondary-light-v1 g-font-size-12" href="about-us.html">Work with Us</a>
                 </li>
                 <li class="list-inline-item g-px-10">
-                  <a class="u-link-v5 g-color-secondary-light-v1 g-font-size-12" href="#">Work with Us</a>
+                  <a class="u-link-v5 g-color-secondary-light-v1 g-font-size-12" href="advertisement-design.html">Advertise</a>
                 </li>
                 <li class="list-inline-item g-px-10">
-                  <a class="u-link-v5 g-color-secondary-light-v1 g-font-size-12" href="#">Advertise</a>
+                  <a class="u-link-v5 g-color-secondary-light-v1 g-font-size-12" href="privacy-policy.html">Privacy</a>
                 </li>
                 <li class="list-inline-item g-px-10">
-                  <a class="u-link-v5 g-color-secondary-light-v1 g-font-size-12" href="#">Privacy</a>
-                </li>
-                <li class="list-inline-item g-px-10">
-                  <a class="u-link-v5 g-color-secondary-light-v1 g-font-size-12" href="#">Terms of Use</a>
-                </li>
-                <li class="list-inline-item g-px-10">
-                  <a class="u-link-v5 g-color-secondary-light-v1 g-font-size-12" href="#">Send Feedback</a>
+                  <a class="u-link-v5 g-color-secondary-light-v1 g-font-size-12" href="terms-of-use.html">Terms of Use</a>
                 </li>
               </ul>
               <!-- End Links -->
