--- a/adobe-after-effect-plugins.html
+++ b/adobe-after-effect-plugins.html
@@ -1618,29 +1618,21 @@
               <!-- Links -->
               <ul class="list-inline mb-0">
                 <li class="list-inline-item g-pl-0 g-pr-10">
-                  <a class="u-link-v5 g-color-secondary-light-v1 g-font-size-12" href="#">Contact Us</a>
+                  <a class="u-link-v5 g-color-secondary-light-v1 g-font-size-12" href="contact-us.html">Contact Us</a>
                 </li>
                 <li class="list-inline-item g-px-10">
-                  <a class="u-link-v5 g-color-secondary-light-v1 g-font-size-12" href="#">Help</a>
+                  <a class="u-link-v5 g-color-secondary-light-v1 g-font-size-12" href="about-us.html">Work with Us</a>
                 </li>
                 <li class="list-inline-item g-px-10">
-                  <a class="u-link-v5 g-color-secondary-light-v1 g-font-size-12" href="#">Work with Us</a>
+                  <a class="u-link-v5 g-color-secondary-light-v1 g-font-size-12" href="advertisement-design.html">Advertise</a>
                 </li>
                 <li class="list-inline-item g-px-10">
-                  <a class="u-link-v5 g-color-secondary-light-v1 g-font-size-12" href="#">Advertise</a>
+                  <a class="u-link-v5 g-color-secondary-light-v1 g-font-size-12" href="privacy-policy.html">Privacy</a>
                 </li>
                 <li class="list-inline-item g-px-10">
-                  <a class="u-link-v5 g-color-secondary-light-v1 g-font-size-12" href="#">Privacy</a>
-                </li>
-                <li class="list-inline-item g-px-10">
-                  <a class="u-link-v5 g-color-secondary-light-v1 g-font-size-12" href="#">Terms of Use</a>
-                </li>
-                <li class="list-inline-item g-px-10">
-                  <a class="u-link-v5 g-color-secondary-light-v1 g-font-size-12" href="#">Send Feedback</a>
+                  <a class="u-link-v5 g-color-secondary-light-v1 g-font-size-12" href="terms-of-use.html">Terms of Use</a>
                 </li>
               </ul>
-              <!-- End Links -->
-            </div>
 
             <div class="col-md-2 g-mb-30">
               <!-- Large Button Group -->
