--- a/black-friday-sale.html
+++ b/black-friday-sale.html
@@ -1074,122 +1074,8 @@
 
                 <hr class="g-brd-gray-light-v4 g-mb-40">
 
-                <!-- Related Articles -->
-                <div class="g-mb-40">
-                  <div class="u-heading-v3-1 g-mb-30">
-                    <h2 class="h5 u-heading-v3__title g-color-gray-dark-v1 text-uppercase g-brd-primary">Related Articles</h2>
-                  </div>
-
-                  <div class="row">
-                    <!-- Article Video -->
-                    <div class="col-lg-4 col-sm-6 g-mb-30">
-                      <article>
-                        <figure class="u-shadow-v25 g-pos-rel g-mb-20">
-                          <img class="img-fluid w-100" src="blog/assets/img-temp/400x270/img2.jpg" alt="SPurno Animation Studio">
-
-                          <figcaption class="g-pos-abs g-top-10 g-left-10">
-                            <a class="btn btn-xs u-btn-blue text-uppercase rounded-0" href="#">Line Background</a>
-                          </figcaption>
-                        </figure>
-
-                        <h3 class="g-font-size-16 g-mb-10">
-                          <a class="u-link-v5 g-color-gray-dark-v1 g-color-primary--hover" href="#">Clark Valberg is a new CEO of InVision..</a>
-                        </h3>
-                      </article>
-                    </div>
-                    <!-- End Article Video -->
-
-                    <!-- Article Video -->
-                    <div class="col-lg-4 col-sm-6 g-mb-30">
-                      <article>
-                        <figure class="u-shadow-v25 g-pos-rel g-mb-20">
-                          <img class="img-fluid w-100" src="blog/assets/img-temp/400x270/img3.jpg" alt="SPurno Animation Studio">
-
-                          <figcaption class="g-pos-abs g-top-10 g-left-10">
-                            <a class="btn btn-xs u-btn-pink text-uppercase rounded-0" href="#">Motion Background</a>
-                          </figcaption>
-                        </figure>
-
-                        <h3 class="g-font-size-16 g-mb-10">
-                          <a class="u-link-v5 g-color-gray-dark-v1 g-color-primary--hover" href="#">How to run a ticket: Best 10 point..</a>
-                        </h3>
-                      </article>
-                    </div>
-                    <!-- End Article Video -->
-
-                    <!-- Article Video -->
-                    <div class="col-lg-4 col-sm-6 g-mb-30">
-                      <article>
-                        <figure class="u-shadow-v25 g-pos-rel g-mb-20">
-                          <img class="img-fluid w-100" src="blog/assets/img-temp/400x270/img8.jpg" alt="SPurno Animation Studio">
-
-                          <figcaption class="g-pos-abs g-top-10 g-left-10">
-                            <a class="btn btn-xs u-btn-teal text-uppercase rounded-0" href="#">Shopping Animation</a>
-                          </figcaption>
-                        </figure>
-
-                        <h3 class="g-font-size-16 g-mb-10">
-                          <a class="u-link-v5 g-color-gray-dark-v1 g-color-primary--hover" href="#">Skyscrapers from blocking sunlight..</a>
-                        </h3>
-                      </article>
-                    </div>
-                    <!-- End Article Video -->
-
-                    <!-- Article Video -->
-                    <div class="col-lg-4 col-sm-6 g-mb-30 g-mb-0--sm">
-                      <article>
-                        <figure class="u-shadow-v25 g-pos-rel g-mb-20">
-                          <img class="img-fluid w-100" src="blog/assets/img-temp/400x270/img15.jpg" alt="SPurno Animation Studio">
-
-                          <figcaption class="g-pos-abs g-top-10 g-left-10">
-                            <a class="btn btn-xs u-btn-darkred text-uppercase rounded-0" href="#">Presentation Slides</a>
-                          </figcaption>
-                        </figure>
-
-                        <h3 class="g-font-size-16 g-mb-10">
-                          <a class="u-link-v5 g-color-gray-dark-v1 g-color-primary--hover" href="#">Architects plan to from blocking out sunlight..</a>
-                        </h3>
-                      </article>
-                    </div>
-                    <!-- End Article Video -->
-
-                    <!-- Article Video -->
-                    <div class="col-lg-4 col-sm-6 g-mb-30 g-mb-0--sm">
-                      <article>
-                        <figure class="u-shadow-v25 g-pos-rel g-mb-20">
-                          <img class="img-fluid w-100" src="blog/assets/img-temp/400x270/img12.jpg" alt="SPurno Animation Studio">
-
-                          <figcaption class="g-pos-abs g-top-10 g-left-10">
-                            <a class="btn btn-xs u-btn-indigo text-uppercase rounded-0" href="#">Finance</a>
-                          </figcaption>
-                        </figure>
-
-                        <h3 class="g-font-size-16 g-mb-10">
-                          <a class="u-link-v5 g-color-gray-dark-v1 g-color-primary--hover" href="#">Cooltex is one of the best technology company..</a>
-                        </h3>
-                      </article>
-                    </div>
-                    <!-- End Article Video -->
-
-                    <!-- Article Video -->
-                    <div class="col-lg-4 col-sm-6">
-                      <article>
-                        <figure class="u-shadow-v25 g-pos-rel g-mb-20">
-                          <img class="img-fluid w-100" src="blog/assets/img-temp/400x270/img13.jpg" alt="SPurno Animation Studio">
-
-                          <figcaption class="g-pos-abs g-top-10 g-left-10">
-                            <a class="btn btn-xs u-btn-brown text-uppercase rounded-0" href="#">Shapes</a>
-                          </figcaption>
-                        </figure>
-
-                        <h3 class="g-font-size-16 g-mb-10">
-                          <a class="u-link-v5 g-color-gray-dark-v1 g-color-primary--hover" href="#">Cameron's silence on defence is shameful..</a>
-                        </h3>
-                      </article>
-                    </div>
-                    <!-- End Article Video -->
-                  </div>
-                </div>
+ 
+ 
 
                 <!-- Author Block -->
                 <div class="g-mb-60">
@@ -1849,29 +1735,21 @@
               <!-- Links -->
               <ul class="list-inline mb-0">
                 <li class="list-inline-item g-pl-0 g-pr-10">
-                  <a class="u-link-v5 g-color-secondary-light-v1 g-font-size-12" href="#">Contact Us</a>
+                  <a class="u-link-v5 g-color-secondary-light-v1 g-font-size-12" href="contact-us.html">Contact Us</a>
                 </li>
                 <li class="list-inline-item g-px-10">
-                  <a class="u-link-v5 g-color-secondary-light-v1 g-font-size-12" href="#">Help</a>
+                  <a class="u-link-v5 g-color-secondary-light-v1 g-font-size-12" href="about-us.html">Work with Us</a>
                 </li>
                 <li class="list-inline-item g-px-10">
-                  <a class="u-link-v5 g-color-secondary-light-v1 g-font-size-12" href="#">Work with Us</a>
+                  <a class="u-link-v5 g-color-secondary-light-v1 g-font-size-12" href="advertisement-design.html">Advertise</a>
                 </li>
                 <li class="list-inline-item g-px-10">
-                  <a class="u-link-v5 g-color-secondary-light-v1 g-font-size-12" href="#">Advertise</a>
+                  <a class="u-link-v5 g-color-secondary-light-v1 g-font-size-12" href="privacy-policy.html">Privacy</a>
                 </li>
                 <li class="list-inline-item g-px-10">
-                  <a class="u-link-v5 g-color-secondary-light-v1 g-font-size-12" href="#">Privacy</a>
-                </li>
-                <li class="list-inline-item g-px-10">
-                  <a class="u-link-v5 g-color-secondary-light-v1 g-font-size-12" href="#">Terms of Use</a>
-                </li>
-                <li class="list-inline-item g-px-10">
-                  <a class="u-link-v5 g-color-secondary-light-v1 g-font-size-12" href="#">Send Feedback</a>
+                  <a class="u-link-v5 g-color-secondary-light-v1 g-font-size-12" href="terms-of-use.html">Terms of Use</a>
                 </li>
               </ul>
-              <!-- End Links -->
-            </div>
 
             <div class="col-md-2 g-mb-30">
               <!-- Large Button Group -->
