--- a/index.html
+++ b/index.html
@@ -82,13 +82,9 @@
                 </span>
               </button>
               <!-- End Responsive Toggle Button -->
-
               <a href="https://spurno.github.io" class="navbar-brand">
                 <img src="images/spurno-logo.png" alt="SPurno Animation Studio Logo - Animation Studio in Bangladesh" style="height: 40px; width: 100px;;">
               </a>
-
-
-
               <!-- Navigation -->
               <div class="collapse navbar-collapse align-items-center flex-sm-row g-pt-10 g-pt-5--lg g-mr-40--lg" id="navBar">
                 <ul class="navbar-nav g-font-weight-600">
@@ -117,7 +113,7 @@
                         </a>
                       </li>
                       <li class="dropdown-item g-bg-secondary--hover">
-                        <a class="nav-link g-color-secondary-dark-v1" href="https://www.vecteezy.com/members/spurno">vecteezy
+                        <a class="nav-link g-color-secondary-dark-v1" href="https://www.pond5.com/artist/spurnoanimation">Pond5
                           <span class="float-right u-label g-rounded-3 g-font-size-10 g-bg-lightred g-pos-rel g-top-minus-1 g-py-3 g-ml-5">New</span>
                         </a>
                       </li>
