--- a/infographics.html
+++ b/infographics.html
@@ -133,7 +133,7 @@
                         </a>
                       </li>
                       <li class="dropdown-item g-bg-secondary--hover">
-                        <a class="nav-link g-color-secondary-dark-v1" href="https://www.vecteezy.com/members/spurno">vecteezy
+                        <a class="nav-link g-color-secondary-dark-v1" href="https://www.pond5.com/artist/spurnoanimation">Pond5
                           <span class="float-right u-label g-rounded-3 g-font-size-10 g-bg-lightred g-pos-rel g-top-minus-1 g-py-3 g-ml-5">New</span>
                         </a>
                       </li>
