link_new_rep_vect_pond5

--- a/index.html
+++ b/index.html
@@ -1175,7 +1175,7 @@
 
                     <!-- LAYER NR. 14 -->
                     <a class="tp-caption rev-btn  tp-resizeme"
-                       href="https://www.vecteezy.com/members/spurno" target="_blank" id="slide-412-layer-13"
+                       href="https://www.pond5.com/artist/spurnoanimation" target="_blank" id="slide-412-layer-13"
                        data-x="['left','left','center','center']" data-hoffset="['0','50','0','0']"
                        data-y="['top','top','top','top']" data-voffset="['0','540','590','400']"
                        data-width="none"
@@ -1414,7 +1414,7 @@
                          data-paddingbottom="[0,0,0,0]"
                          data-paddingleft="[0,0,0,0]"
 
-                         style="z-index: 8; min-width: 640px; max-width: 640px; white-space: normal; font-size: 40px; line-height: 50px; font-weight: 300; color: rgba(255, 255, 255, 1.00); display: block;font-family:Quicksand;">Buy wallpaper and vector graphics
+                         style="z-index: 8; min-width: 640px; max-width: 640px; white-space: normal; font-size: 40px; line-height: 50px; font-weight: 300; color: rgba(255, 255, 255, 1.00); display: block;font-family:Quicksand;">Browse Pond5 video library
                     </div>
 
                     <!-- LAYER NR. 23 -->
@@ -1650,7 +1650,7 @@
 
                  style="z-index: 20; min-width: 260px; max-width: 260px; white-space: nowrap; font-size: 15px; line-height: 15px; font-weight: 500; color: rgba(255, 255, 255, 1.00);font-family:Quicksand;">2
               <div class="blurslider-line" style="display:inline-block;width:40px;height:1px;background:#fff;margin: 10px 20px 4px 15px;"></div>
-              Vecteegy
+              Pond5
             </div>
 
             <!-- LAYER NR. 32 -->
